# django-med

./: .gitignore  README.md  pyproject.toml
accounts/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers_customuser_birth.py  0002_customuser_birth.py
contrib/sites/migrations/: 0003_set_site_domain_and_name.py
django_project/: settings.py  urls.py
django_project/config/: __init__.py  base.py  local.py  production.py  test.py
pages/: urls.py  views.py
records/: admin.py  models.py
records/migrations/: 0001_initial.py
static/css/: simple.css
templates/: _base.html
templates/accounts/: profile-edit.html  profile.html
templates/pages/: home.html
